crates/toml/tests/snapshots/invalid/ext/string/missing-quotes-in-array.stderr
TOML parse error at line 1, column 9
  |
1 | name = [value]
  |         ^
invalid array
expected `]`
